--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 55px;
+  background: #f55a5a;
+}
+
+.title {
+  color: white;
+  font-family: 'Inter', sans-serif;
+  font-size: 25px;
+}
+
+.card {
+  font-family: Inter, sans-serif;
+  height: 200px;
+  margin-top: 40px;
+  margin-left: 40px;
+  padding: 0px 2px;
+}
+
+.card-image {
+  float: left;
+  width: 175px;
+  height: 215px;
+  border-radius: 5px;
+}
+
+.card-stats {
+  display: flex;
+  margin-top: 10px;
+  padding: 0px 15px;
+}
+.card-location {
+  width: 110px;
+}
+
+span > a {
+  color: #918E9B;
+}
+
+.card-pin {
+  width: 10px;
+  height: 15px;
+  margin-top: 2px;
+  margin-right: 5px;
+}
+
+.card-title {
+  display: flex;
+  padding: 0px 15px;
+}
+
+.card-date {
+  display: flex;
+  padding: 0px 15px;
+}
+
+.card-description {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0px 15px;
+  font-size: 16px;
+  line-height: 1.5rem;
 }
